# wxtest0

./: .gitignore  CMakeLists.txt  main.cpp  vcpkg.json  wxInc.h
triplets/: x86-windows-mixed.cmake
